--- a/main.ipynb
+++ b/main.ipynb
@@ -61,7 +61,7 @@
     "import pyfits as pf\n",
     "\n",
     "# utilities\n",
-    "import os, time, sys, datetime, warnings, getpass, glob, fnmatch\n",
+    "import os, time, sys, datetime, warnings, getpass, glob, fnmatch, cPickle\n",
     "import functools\n",
     "\n",
     "# tdpy\n",
@@ -113,7 +113,7 @@
     "        globdata.thisindxpntsfull.append(range(thisnumbpnts[l]))\n",
     "        globdata.thisindxpntsempt.append(range(thisnumbpnts[l], globdata.maxmnumbpnts[l]))\n",
     "    globdata.thisindxsamplgal, globdata.thisindxsampbgal, globdata.thisindxsampspec, \\\n",
-    "        globdata.thisindxsampsind, globdata.thisindxsampcomp = retr_indx(globdata.thisindxpntsfull)\n",
+    "        globdata.thisindxsampsind, globdata.thisindxsampcomp = retr_indx(globdata, globdata.thisindxpntsfull)\n",
     "      \n",
     "    if globdata.verbtype > 2:\n",
     "        print 'thisindxpntsfull: ', globdata.thisindxpntsfull\n",
@@ -759,44 +759,47 @@
     "    if globdata.datatype == 'inpt':\n",
     "        exprflux = exprflux[globdata.filtindx]\n",
     "        \n",
-    "    # temp\n",
-    "    if globdata.exprtype == 'ferm':\n",
-    "        \n",
-    "        if psfntype == 'singgaus':\n",
-    "            jfermformpara = array([1])\n",
-    "        elif psfntype == 'singking':\n",
+    "\n",
+    "    if False:\n",
+    "        if globdata.psfntype == 'singgaus':\n",
+    "            indxfermformpara = array([1])\n",
+    "        elif globdata.psfntype == 'singking':\n",
     "            jfermformpara = array([1, 2])\n",
-    "        elif psfntype == 'doubgaus':\n",
+    "        elif globdata.psfntype == 'doubgaus':\n",
     "            jfermformpara = array([0, 1, 3])\n",
-    "        elif psfntype == 'gausking':\n",
+    "        elif globdata.psfntype == 'gausking':\n",
     "            jfermformpara = array([0, 1, 3, 4])\n",
-    "        elif psfntype == 'doubking':\n",
+    "        elif globdata.psfntype == 'doubking':\n",
     "            jfermformpara = arange(5)\n",
     "\n",
     "        jfermpsfipara = tile(jfermformpara, globdata.numbener) + repeat(globdata.indxener, jfermformpara.size) * nfermformpara\n",
     "        jfermpsfipara = tile(jfermpsfipara, globdata.numbevtt) + repeat(globdata.indxevtt, jfermpsfipara.size) * globdata.numbener * nfermformpara\n",
     "\n",
     "        globdata.truepsfipara = fermpsfipara[jfermpsfipara]\n",
-    "        \n",
-    "    else:   \n",
-    "        \n",
-    "        globdata.truepsfipara = None\n",
     "\n",
+    "        # temp\n",
+    "        globdata.truepsfipara = array([1., deg2rad(0.1), deg2rad(2.), 10., \\\n",
+    "                              1., deg2rad(0.1), deg2rad(2.), 10., \\\n",
+    "                              1., deg2rad(0.1), deg2rad(2.), 10., \\\n",
+    "                              1., deg2rad(0.1), deg2rad(2.), 10., \\\n",
+    "                              1., deg2rad(0.1), deg2rad(2.), 10.])\n",
+    "\n",
+    "        print 'truepsfipara'\n",
+    "        print globdata.truepsfipara\n",
+    "        \n",
+    "   \n",
     "    # temp\n",
-    "    globdata.truepsfipara = array([1., deg2rad(0.1), deg2rad(2.), 10., \\\n",
-    "                          1., deg2rad(0.1), deg2rad(2.), 10., \\\n",
-    "                          1., deg2rad(0.1), deg2rad(2.), 10., \\\n",
-    "                          1., deg2rad(0.1), deg2rad(2.), 10., \\\n",
-    "                          1., deg2rad(0.1), deg2rad(2.), 10.])\n",
+    "    if globdata.trueinfo:\n",
+    "        if globdata.exprtype == 'ferm':\n",
+    "            globdata.truepsfipara = globdata.fermpsfipara\n",
+    "        else:   \n",
+    "            globdata.truepsfipara = None\n",
     "\n",
-    "    print 'truepsfipara'\n",
-    "    print globdata.truepsfipara\n",
-    "    \n",
     "    # exposure\n",
-    "    if globdata.expostrg == 'unit':\n",
+    "    if expostrg == 'unit':\n",
     "        globdata.expo = ones((globdata.numbener, globdata.numbpixl, globdata.numbevtt))\n",
     "    else:\n",
-    "        path = os.environ[\"PNTS_TRAN_DATA_PATH\"] + '/' + globdata.expostrg\n",
+    "        path = os.environ[\"PNTS_TRAN_DATA_PATH\"] + '/' + expostrg\n",
     "        globdata.expo = pf.getdata(path)\n",
     "\n",
     "        if globdata.pixltype == 'heal':\n",
@@ -810,16 +813,16 @@
     "    # backgrounds\n",
     "    globdata.backflux = []\n",
     "    globdata.backfluxmean = []\n",
-    "    for c, globdata.backfluxstrg in enumerate(listglobdata.backfluxstrg):\n",
-    "        path = os.environ[\"PNTS_TRAN_DATA_PATH\"] + '/' + globdata.backfluxstrg\n",
-    "        globdata.backfluxtemp = pf.getdata(path)\n",
+    "    for c, backfluxstrg in enumerate(listbackfluxstrg):\n",
+    "        path = os.environ[\"PNTS_TRAN_DATA_PATH\"] + '/' + backfluxstrg\n",
+    "        backfluxtemp = pf.getdata(path)\n",
     "        if globdata.pixltype == 'heal':\n",
-    "            globdata.backfluxtemp = globdata.backfluxtemp[healindx]\n",
+    "            backfluxtemp = backfluxtemp[healindx]\n",
     "        else:\n",
-    "            globdata.backfluxtemp = globdata.backfluxtemp.reshape((globdata.backfluxtemp.shape[0], -1, globdata.backfluxtemp.shape[-1]))\n",
-    "        globdata.backfluxtemp = globdata.backfluxtemp[globdata.filtindx]\n",
-    "        globdata.backflux.append(globdata.backfluxtemp)\n",
-    "        globdata.backfluxmean.append(mean(sum(globdata.backfluxtemp * globdata.expo, 2) / sum(globdata.expo, 2), 1))\n",
+    "            backfluxtemp = backfluxtemp.reshape((backfluxtemp.shape[0], -1, backfluxtemp.shape[-1]))\n",
+    "        backfluxtemp = backfluxtemp[globdata.filtindx]\n",
+    "        globdata.backflux.append(backfluxtemp)\n",
+    "        globdata.backfluxmean.append(mean(sum(backfluxtemp * globdata.expo, 2) / sum(globdata.expo, 2), 1))\n",
     "        \n",
     "\n",
     "        \n",
@@ -875,7 +878,7 @@
     "    # get 3FGL catalog\n",
     "    if globdata.exprtype == 'ferm':\n",
     "        globdata.fgl3lgal, globdata.fgl3bgal, globdata.fgl3spec, fgl3gang, \\\n",
-    "            globdata.fgl3cnts, globdata.fgl3timevari, globdata.fgl3sind, globdata.fgl3spectype, globdata.fgl3scur, globdata.fgl3scut = retr_fgl3()\n",
+    "            globdata.fgl3cnts, globdata.fgl3timevari, globdata.fgl3sind, globdata.fgl3spectype, globdata.fgl3scur, globdata.fgl3scut = retr_fgl3(globdata)\n",
     "        \n",
     "        if globdata.regitype == 'ngal':\n",
     "            rttr = hp.rotator.Rotator(rot=[0., 90., 0.], deg=True)\n",
@@ -887,10 +890,10 @@
     "            globdata.indxfgl3rofi = intersect1d(where((globdata.fgl3spec[0, i, :] > globdata.minmspec[i]) & (globdata.fgl3spec[0, i, :] < globdata.maxmspec[i]))[0], globdata.indxfgl3rofi)\n",
     "        globdata.indxfgl3rofi = intersect1d(where((abs(globdata.fgl3lgal) < globdata.maxmgangmarg) & (abs(globdata.fgl3bgal) < globdata.maxmgangmarg))[0], globdata.indxfgl3rofi)\n",
     "\n",
-    "        globdata.indxglobdata.fgl3timevari = where(globdata.fgl3timevari > 72.44)[0]\n",
+    "        globdata.indxfgl3timevari = where(globdata.fgl3timevari > 72.44)[0]\n",
     "        \n",
     "\n",
-    "        plot_fgl3()\n",
+    "        plot_fgl3(globdata)\n",
     "        \n",
     "        globdata.fgl3lgal = globdata.fgl3lgal[globdata.indxfgl3rofi]\n",
     "        globdata.fgl3bgal = globdata.fgl3bgal[globdata.indxfgl3rofi]\n",
@@ -901,7 +904,7 @@
     "        globdata.fgl3scut = globdata.fgl3scut[globdata.indxfgl3rofi]\n",
     "        globdata.fgl3timevari = globdata.fgl3timevari[globdata.indxfgl3rofi]\n",
     "\n",
-    "        globdata.indxglobdata.fgl3timevari = where(globdata.fgl3timevari > 72.44)[0]\n",
+    "        globdata.indxfgl3timevari = where(globdata.fgl3timevari > 72.44)[0]\n",
     "\n",
     "        globdata.fgl3numbpnts = globdata.fgl3lgal.size\n",
     "        \n",
@@ -935,7 +938,8 @@
     "        for l in globdata.indxpopl:\n",
     "            mockindxpntsfull.append(range(globdata.mocknumbpnts[l]))\n",
     "          \n",
-    "        mockindxsamplgal, mockindxsampbgal, mockindxsampspec, mockindxsampsind, mockindxsampcomp = retr_indx(mockindxpntsfull)\n",
+    "        mockindxsamplgal, mockindxsampbgal, mockindxsampspec, \\\n",
+    "            mockindxsampsind, mockindxsampcomp = retr_indx(globdata, mockindxpntsfull)\n",
     "\n",
     "        mocksamp = zeros(globdata.maxmsampsize)\n",
     "        mocksamp[globdata.indxsampnumbpnts] = globdata.mocknumbpnts\n",
@@ -1013,9 +1017,7 @@
     "                \n",
     "\n",
     "        #plot_pntsdiff()\n",
-    "         \n",
-    "    #plot_globdata.datacntshist()\n",
-    "    \n",
+    "    #plot_datacntshist()\n",
     "\n",
     "    if amax(abs(globdata.datacnts - globdata.datacnts.astype(int)) / globdata.datacnts) > 1e-3:\n",
     "        print 'Fractional counts!'\n",
@@ -1047,7 +1049,7 @@
     "                globdata.truesind = [globdata.fgl3sind]\n",
     "            globdata.truecnts = [globdata.fgl3spec[0, :, :, None] * globdata.expo[:, retr_pixl(globdata.truebgal[0], globdata.truelgal[0]), :] * \\\n",
     "                            globdata.diffener[:, None, None]]\n",
-    "            globdata.jtruepntstimevari = [globdata.indxglobdata.fgl3timevari]\n",
+    "            globdata.jtruepntstimevari = [globdata.indxfgl3timevari]\n",
     "            if globdata.exprtype == 'ferm':\n",
     "                globdata.truespec = [globdata.fgl3spec]\n",
     "                \n",
@@ -1248,7 +1250,8 @@
     "    for k in range(globdata.numbproc):\n",
     "        for j in range(globdata.numbsamp):            \n",
     "            n = k * globdata.numbsamp + j\n",
-    "            indxsamplgal, indxsampbgal, indxsampspec, indxsampsind, indxsampcomp = retr_indx(listindxpntsfull[k][j])\n",
+    "            indxsamplgal, indxsampbgal, indxsampspec, \\\n",
+    "                indxsampsind, indxsampcomp = retr_indx(globdata, listindxpntsfull[k][j])\n",
     "            for l in globdata.indxpopl:\n",
     "                listlgal[l].append(listsampvarb[j, k, indxsamplgal[l]])\n",
     "                listbgal[l].append(listsampvarb[j, k, indxsampbgal[l]])\n",
@@ -1494,7 +1497,7 @@
     "    pf.HDUList(listhdun).writeto(pathprobcatl, clobber=True)\n",
     "    \n",
     "    if globdata.makeplot:\n",
-    "        plot_post(pathprobcatl)\n",
+    "        plot_post(globdata, pathprobcatl)\n",
     "\n",
     "    timetotlreal = time.time() - timetotlreal\n",
     "    timetotlproc = time.clock() - timetotlproc\n",
