--- a/util.ipynb
+++ b/util.ipynb
@@ -133,7 +133,7 @@
     "    # convolve with the PSF\n",
     "    pntsflux = empty((numbpnts, globdata.numbener, numbpixl, globdata.numbevtt))\n",
     "    for k in range(numbpnts):\n",
-    "        psfn = retr_psfn(globdata, psfipara, globdata.indxener, dist[:, k], globdata.modlpsfntype, 'modl')\n",
+    "        psfn = retr_psfn(globdata, psfipara, globdata.indxener, dist[:, k], globdata.psfntype, 'modl')\n",
     "        pntsflux[k, :, :, :] = spec[:, k, None, None] * psfn\n",
     "\n",
     "    # sum contributions from all PS\n",
@@ -257,25 +257,33 @@
     "\n",
     "\n",
     "def icdf_psfipara(globdata, psfiparaunit, thisindxpsfipara):\n",
-    "    \n",
-    "    if scalpsfipara[thisindxpsfipara] == 'self':\n",
-    "        psfipara = icdf_self(psfiparaunit, minmpsfipara[thisindxpsfipara], factpsfipara[thisindxpsfipara])\n",
-    "    if scalpsfipara[thisindxpsfipara] == 'logt':\n",
-    "        psfipara = icdf_logt(psfiparaunit, minmpsfipara[thisindxpsfipara], factpsfipara[thisindxpsfipara])\n",
-    "    if scalpsfipara[thisindxpsfipara] == 'atan':\n",
-    "        psfipara = icdf_atan(psfiparaunit, minmpsfipara[thisindxpsfipara], factpsfipara[thisindxpsfipara])\n",
+    "\n",
+    "    minmpsfipara = globdata.minmpsfipara[thisindxpsfipara]\n",
+    "    factpsfipara = globdata.factpsfipara[thisindxpsfipara]\n",
+    "    scalpsfipara = globdata.scalpsfipara[thisindxpsfipara]\n",
+    "        \n",
+    "    if scalpsfipara == 'self':\n",
+    "        psfipara = icdf_self(psfiparaunit, minmpsfipara, factpsfipara)\n",
+    "    if scalpsfipara == 'logt':\n",
+    "        psfipara = icdf_logt(psfiparaunit, minmpsfipara, factpsfipara)\n",
+    "    if scalpsfipara == 'atan':\n",
+    "        psfipara = icdf_atan(psfiparaunit, minmpsfipara, factpsfipara)\n",
     "\n",
     "    return psfipara\n",
     "\n",
     "\n",
     "def cdfn_psfipara(globdata, psfipara, thisindxpsfipara):\n",
     "    \n",
-    "    if scalpsfipara[thisindxpsfipara] == 'self':\n",
-    "        psfiparaunit = cdfn_self(psfipara, minmpsfipara[thisindxpsfipara], factpsfipara[thisindxpsfipara])\n",
-    "    if scalpsfipara[thisindxpsfipara] == 'logt':\n",
-    "        psfiparaunit = cdfn_logt(psfipara, minmpsfipara[thisindxpsfipara], factpsfipara[thisindxpsfipara])\n",
-    "    if scalpsfipara[thisindxpsfipara] == 'atan':\n",
-    "        psfiparaunit = cdfn_atan(psfipara, minmpsfipara[thisindxpsfipara], factpsfipara[thisindxpsfipara])\n",
+    "    minmpsfipara = globdata.minmpsfipara[thisindxpsfipara]\n",
+    "    factpsfipara = globdata.factpsfipara[thisindxpsfipara]\n",
+    "    scalpsfipara = globdata.scalpsfipara[thisindxpsfipara]\n",
+    "\n",
+    "    if scalpsfipara == 'self':\n",
+    "        psfiparaunit = cdfn_self(psfipara, minmpsfipara, factpsfipara)\n",
+    "    if scalpsfipara == 'logt':\n",
+    "        psfiparaunit = cdfn_logt(psfipara, minmpsfipara, factpsfipara)\n",
+    "    if scalpsfipara == 'atan':\n",
+    "        psfiparaunit = cdfn_atan(psfipara, minmpsfipara, factpsfipara)\n",
     "    \n",
     "    return psfiparaunit\n",
     "\n",
@@ -387,7 +395,7 @@
     "                    temppsfipara = nextpsfipara\n",
     "                else:\n",
     "                    temppsfipara = thissampvarb[indxsamppsfipara]\n",
-    "                psfn = retr_psfn(globdata, temppsfipara, globdata.indxenermodi, dist, globdata.modlpsfntype, 'modl')\n",
+    "                psfn = retr_psfn(globdata, temppsfipara, globdata.indxenermodi, dist, globdata.psfntype, 'modl')\n",
     "                                \n",
     "                # update the data cubes\n",
     "                for i in range(globdata.indxenermodi.size):\n",
@@ -435,7 +443,7 @@
     "    if init:\n",
     "        thislpri = zeros((numbpopl, globdata.numbener))\n",
     "        \n",
-    "        for i in globdata.indxglobdata.enerfdfn:\n",
+    "        for i in globdata.indxenerfdfn:\n",
     "            for l in globdata.indxpopl:\n",
     "                fluxhistmodl = retr_fdfn(thissampvarb[indxsampfdfnnorm[l]], thissampvarb[indxsampfdfnslop[l, i]], i)\n",
     "                fluxhist = histogram(thissampvarb[thisindxsampspec[l][i, :]], binsspec[i, :])[0]\n",
@@ -450,7 +458,7 @@
     "            or globdata.thisindxprop >= indxpropbrth and globdata.thisindxprop <= indxpropmerg:\n",
     "              \n",
     "            if globdata.colrprio:\n",
-    "                indxenertemp = globdata.indxglobdata.enerfdfn\n",
+    "                indxenertemp = globdata.indxenerfdfn\n",
     "            else:\n",
     "                indxenertemp = globdata.indxenermodi\n",
     "            for i in indxenertemp:\n",
@@ -513,7 +521,7 @@
     "    for c in indxback:\n",
     "        sampvarb[indxsampnormback[c, :]] = icdf_logt(samp[indxsampnormback[c, :]], minmnormback[c], factnormback[c])\n",
     "    for k in ipsfipara:\n",
-    "        sampvarb[indxsamppsfipara[k]] = icdf_psfipara(samp[indxsamppsfipara[k]], k)\n",
+    "        sampvarb[indxsamppsfipara[k]] = icdf_psfipara(globdata, samp[indxsamppsfipara[k]], k, 'modl')\n",
     "\n",
     "    cnts = []\n",
     "    listspectemp = []\n",
@@ -521,12 +529,12 @@
     "    for l in globdata.indxpopl:\n",
     "        sampvarb[indxsamplgal[l]] = icdf_self(samp[indxsamplgal[l]], -globdata.maxmgangmarg, 2. * globdata.maxmgangmarg)\n",
     "        sampvarb[indxsampbgal[l]] = icdf_self(samp[indxsampbgal[l]], -globdata.maxmgangmarg, 2. * globdata.maxmgangmarg) \n",
-    "        for i in globdata.indxglobdata.enerfdfn:\n",
+    "        for i in globdata.indxenerfdfn:\n",
     "            sampvarb[indxsampspec[l][i, :]] = icdf_spec(samp[indxsampspec[l][i, :]], sampvarb[indxsampfdfnslop[l, i]], globdata.minmspec[i], globdata.maxmspec[i])\n",
     "            \n",
     "        if globdata.colrprio:\n",
-    "            sampvarb[indxsampsind[l]] = icdf_atan(samp[indxsampsind[l]], minmsind, factsind)\n",
-    "            sampvarb[indxsampspec[l]] = retr_spec(sampvarb[indxsampspec[l][globdata.indxglobdata.enerfdfn, :]], sampvarb[indxsampsind[l]])\n",
+    "            sampvarb[indxsampsind[l]] = icdf_atan(samp[indxsampsind[l]], globdata.minmsind, globdata.factsind)\n",
+    "            sampvarb[indxsampspec[l]] = retr_spec(sampvarb[indxsampspec[l][globdata.indxenerfdfn, :]], sampvarb[indxsampsind[l]])\n",
     "            \n",
     "        indxpixlpntstemp = retr_indxpixl(globdata, sampvarb[indxsampbgal[l]], sampvarb[indxsamplgal[l]])\n",
     "    \n",
@@ -581,7 +589,7 @@
     "    \n",
     "    fermscal = zeros((globdata.numbevtt, globdata.numbfermscalpara))\n",
     "    fermform = zeros((globdata.numbener, globdata.numbevtt, globdata.numbfermformpara))\n",
-    "    globdata.fermpsfipara = zeros((globdata.numbener * globdata.numbfermformpara * globdata.numbevtt))\n",
+    "    fermpsfipara = zeros((globdata.numbener * globdata.numbfermformpara * globdata.numbevtt))\n",
     "    for m in globdata.indxevtt:\n",
     "        fermscal[m, :] = pf.getdata(name, 2 + 3 * globdata.indxevttincl[m])['PSFSCALE']\n",
     "        irfn = pf.getdata(name, 1 + 3 * globdata.indxevttincl[m])\n",
@@ -602,7 +610,7 @@
     "    for m in globdata.indxevtt:\n",
     "        for k in range(globdata.numbfermformpara):\n",
     "            indxfermpsfiparatemp = m * globdata.numbfermformpara * globdata.numbener + globdata.indxener * globdata.numbfermformpara + k\n",
-    "            globdata.fermpsfipara[indxfermpsfiparatemp] = fermform[:, m, k]\n",
+    "            fermpsfipara[indxfermpsfiparatemp] = fermform[:, m, k]\n",
     "        \n",
     "    frac = fermform[:, :, 0]\n",
     "    sigc = fermform[:, :, 1]\n",
@@ -610,10 +618,10 @@
     "    sigt = fermform[:, :, 3]\n",
     "    gamt = fermform[:, :, 4]\n",
     "    \n",
-    "    psfn = retr_doubking(globdata.angldisp[None, :, None], frac[:, None, :], sigc[:, None, :], gamc[:, None, :], \\\n",
+    "    fermpsfn = retr_doubking(globdata.angldisp[None, :, None], frac[:, None, :], sigc[:, None, :], gamc[:, None, :], \\\n",
     "                         sigt[:, None, :], gamt[:, None, :])\n",
     "            \n",
-    "    return psfn\n",
+    "    return fermpsfn, fermpsfipara\n",
     "\n",
     "\n",
     "def updt_samp(globdata):\n",
@@ -850,11 +858,11 @@
     "    if indxprocwork == None:\n",
     "        rtag = 'AA_%d_%d_%d_%d_%s_%s_%s' % (globdata.numbproc, globdata.numbswep, globdata.numbburn, \\\n",
     "                                            globdata.factthin, globdata.datatype, globdata.regitype, \\\n",
-    "                                            globdata.modlpsfntype)\n",
+    "                                            globdata.psfntype)\n",
     "    else:\n",
     "        rtag = '%02d_%d_%d_%d_%d_%s_%s_%s' % (indxprocwork, globdata.numbproc, globdata.numbswep, \\\n",
     "                                              globdata.numbburn, globdata.factthin, globdata.datatype, \\\n",
-    "                                              globdata.regitype, globdata.modlpsfntype)\n",
+    "                                              globdata.regitype, globdata.psfntype)\n",
     "        \n",
     "    return rtag\n",
     "\n",
@@ -901,30 +909,26 @@
     "    return psrf\n",
     "\n",
     "\n",
-    "def retr_psfn(globdata, psfipara, indxenertemp, thisangl, psfntype, evaltype):\n",
+    "def retr_psfn(globdata, psfipara, indxenertemp, thisangl):\n",
     "\n",
     "    thisangltemp = thisangl[None, :, None]\n",
     "\n",
-    "    if evaltype == 'mock':\n",
-    "        indxpsfiparatemp = indxenertemp[:, None] * globdata.numbmodlformpara + \\\n",
-    "            globdata.indxevtt[None, :] * globdata.numbmodlpsfiparaevtt\n",
-    "    else:\n",
-    "        indxpsfiparatemp = indxenertemp[:, None] * globdata.numbmockformpara + \\\n",
-    "            globdata.indxevtt[None, :] * globdata.numbmockpsfiparaevtt\n",
+    "    indxpsfiparatemp = indxenertemp[:, None] * globdata.numbformpara + \\\n",
+    "        globdata.indxevtt[None, :] * globdata.numbpsfiparaevtt\n",
     "    \n",
-    "    if globdata.modlpsfntype == 'singgaus':\n",
+    "    if globdata.psfntype == 'singgaus':\n",
     "        sigc = psfipara[indxpsfiparatemp]\n",
     "        sigc = sigc[:, None, :]\n",
     "        psfn = retr_singgaus(thisangltemp, sigc)\n",
     "\n",
-    "    elif psfntype == 'singking':\n",
+    "    elif globdata.psfntype == 'singking':\n",
     "        sigc = psfipara[indxpsfiparatemp]\n",
     "        gamc = psfipara[indxpsfiparatemp+1]\n",
     "        sigc = sigc[:, None, :]\n",
     "        gamc = gamc[:, None, :]\n",
     "        psfn = retr_singking(thisangltemp, sigc, gamc)\n",
     "        \n",
-    "    elif psfntype == 'doubgaus':\n",
+    "    elif globdata.psfntype == 'doubgaus':\n",
     "        frac = psfipara[indxpsfiparatemp]\n",
     "        sigc = psfipara[indxpsfiparatemp+1]\n",
     "        sigt = psfipara[indxpsfiparatemp+2]\n",
@@ -933,7 +937,7 @@
     "        sigt = sigt[:, None, :]\n",
     "        psfn = retr_doubgaus(thisangltemp, frac, sigc, sigt)\n",
     "\n",
-    "    elif psfntype == 'gausking':\n",
+    "    elif globdata.psfntype == 'gausking':\n",
     "        frac = psfipara[indxpsfiparatemp]\n",
     "        sigc = psfipara[indxpsfiparatemp+1]\n",
     "        sigt = psfipara[indxpsfiparatemp+2]\n",
@@ -944,7 +948,7 @@
     "        gamt = gamt[:, None, :]\n",
     "        psfn = retr_gausking(thisangltemp, frac, sigc, sigt, gamt)\n",
     "        \n",
-    "    elif psfntype == 'doubking':\n",
+    "    elif globdata.psfntype == 'doubking':\n",
     "        frac = psfipara[indxpsfiparatemp]\n",
     "        sigc = psfipara[indxpsfiparatemp+1]\n",
     "        gamc = psfipara[indxpsfiparatemp+2]\n",
@@ -1010,15 +1014,11 @@
     "    return chsq\n",
     "\n",
     "\n",
-    "def retr_psfimodl(globdata, psfntype, evaltype):\n",
+    "def retr_psfimodl(globdata):\n",
     "    \n",
-    "    if evaltype == 'mock':\n",
-    "        numbformpara = globdata.numbmockformpara\n",
-    "        numbpsfiparaevtt = globdata.numbmockpsfiparaevtt\n",
-    "    else:\n",
-    "        numbformpara = globdata.numbmodlformpara\n",
-    "        numbpsfiparaevtt = globdata.numbmodlpsfiparaevtt\n",
-    "        \n",
+    "    numbformpara = globdata.numbformpara\n",
+    "    numbpsfiparaevtt = globdata.numbpsfiparaevtt\n",
+    "\n",
     "    minmformpara = zeros(numbformpara)\n",
     "    maxmformpara = zeros(numbformpara)\n",
     "    factformpara = zeros(numbformpara)\n",
@@ -1033,12 +1033,12 @@
     "    if globdata.exprtype == 'sdss':\n",
     "        minmanglpsfn = deg2rad(0.01 / 3600.)\n",
     "        maxmanglpsfn = deg2rad(2. / 3600.)\n",
-    "    if psfntype == 'singgaus':\n",
+    "    if globdata.psfntype == 'singgaus':\n",
     "        minmformpara[0] = minmanglpsfn\n",
     "        maxmformpara[0] = maxmanglpsfn\n",
     "        scalformpara[0] = 'logt'\n",
     "        strgformpara = [r'$\\sigma']\n",
-    "    elif psfntype == 'singking':\n",
+    "    elif globdata.psfntype == 'singking':\n",
     "        minmformpara[0] = minmanglpsfn\n",
     "        maxmformpara[0] = maxmanglpsfn\n",
     "        minmformpara[1] = minmgamm\n",
@@ -1046,7 +1046,7 @@
     "        scalformpara[0] = 'logt'\n",
     "        scalformpara[1] = 'atan'\n",
     "        strgformpara = [r'$\\sigma', r'$\\gamma']\n",
-    "    elif psfntype == 'doubgaus':\n",
+    "    elif globdata.psfntype == 'doubgaus':\n",
     "        minmformpara[0] = minmpsfnfrac\n",
     "        maxmformpara[0] = maxmpsfnfrac\n",
     "        minmformpara[1] = minmanglpsfn\n",
@@ -1057,7 +1057,7 @@
     "        scalformpara[1] = 'logt'\n",
     "        scalformpara[2] = 'logt'\n",
     "        strgformpara = ['$f_c', r'$\\sigma_c', r'$\\sigma_t']\n",
-    "    elif psfntype == 'gausking':\n",
+    "    elif globdata.psfntype == 'gausking':\n",
     "        minmformpara[0] = minmpsfnfrac\n",
     "        maxmformpara[0] = maxmpsfnfrac\n",
     "        minmformpara[1] = minmanglpsfn\n",
@@ -1071,7 +1071,7 @@
     "        scalformpara[2] = 'logt'\n",
     "        scalformpara[3] = 'atan'\n",
     "        strgformpara = ['$f_g', r'$\\sigma_g', r'$\\sigma_k', r'$\\gamma']\n",
-    "    elif psfntype == 'doubking':\n",
+    "    elif globdata.psfntype == 'doubking':\n",
     "        minmformpara[0] = minmpsfnfrac\n",
     "        maxmformpara[0] = maxmpsfnfrac\n",
     "        minmformpara[1] = minmanglpsfn\n",
@@ -1108,12 +1108,12 @@
     "    indxpsfiparainit = (arange(globdata.numbevtt)[:, None] * numbpsfiparaevtt + arange(globdata.numbener)[None, :] * numbformpara).flatten()\n",
     "\n",
     "    for k in arange(numbformpara):\n",
-    "        if psfntype == 'singgaus' or psfntype == 'singking':\n",
+    "        if globdata.psfntype == 'singgaus' or globdata.psfntype == 'singking':\n",
     "            strgpsfipara[indxpsfiparainit[k]] += ' ' + globdata.strganglunit\n",
-    "        elif psfntype == 'doubgaus' or psfntype == 'gausking':\n",
+    "        elif globdata.psfntype == 'doubgaus' or globdata.psfntype == 'gausking':\n",
     "            strgpsfipara[indxpsfiparainit[k]+1] += ' ' + globdata.strganglunit\n",
     "            strgpsfipara[indxpsfiparainit[k]+2] += ' ' + globdata.strganglunit\n",
-    "        elif psfntype == 'doubking':\n",
+    "        elif globdata.psfntype == 'doubking':\n",
     "            strgpsfipara[indxpsfiparainit[k]+1] += ' ' + globdata.strganglunit\n",
     "            strgpsfipara[indxpsfiparainit[k]+3] += ' ' + globdata.strganglunit\n",
     "\n",
