--- a/util.ipynb
+++ b/util.ipynb
@@ -214,14 +214,14 @@
     "\n",
     "def icdf_spec(globdata, fluxunit, fdfnslop, minmspectemp, maxmspectemp):\n",
     "    \n",
-    "    flux = (fluxunit * (globdata.maxmspectemp**(1. - fdfnslop) - minmspectemp**(1. - fdfnslop)) + minmspectemp**(1. - fdfnslop))**(1. / (1. - fdfnslop))\n",
+    "    flux = (fluxunit * (maxmspectemp**(1. - fdfnslop) - minmspectemp**(1. - fdfnslop)) + minmspectemp**(1. - fdfnslop))**(1. / (1. - fdfnslop))\n",
     "    \n",
     "    return flux\n",
     "\n",
     "\n",
     "def pdfn_spec(globdata, flux, fdfnslop, minmspectemp, maxmspectemp):\n",
     "  \n",
-    "    pdfnflux = (1. - fdfnslop) / (globdata.maxmspectemp**(1. - fdfnslop) - minmspectemp**(1. - fdfnslop)) * flux**(-fdfnslop)\n",
+    "    pdfnflux = (1. - fdfnslop) / (maxmspectemp**(1. - fdfnslop) - minmspectemp**(1. - fdfnslop)) * flux**(-fdfnslop)\n",
     "          \n",
     "    return pdfnflux\n",
     "\n",
@@ -410,13 +410,14 @@
     "                else:\n",
     "                    normbacktemp[c, 0] = thissampvarb[indxsampnormback[c, globdata.indxenermodi]]\n",
     "                \n",
-    "            nextmodlflux[modiindx] = retr_rofi_flux(normbacktemp, thispntsflux, modiindx)\n",
+    "            nextmodlflux[modiindx] = retr_rofi_flux(globdata, normbacktemp, thispntsflux, modiindx)\n",
     "\n",
     "        if globdata.thisindxprop == indxproppsfipara or globdata.thisindxprop >= indxpropbrth:\n",
-    "            nextmodlflux[modiindx] = retr_rofi_flux(thissampvarb[indxsampnormback[meshgrid(indxback, globdata.indxenermodi, indexing='ij')]], \\\n",
-    "                                                    nextpntsflux, modiindx)\n",
+    "            normback = thissampvarb[indxsampnormback[meshgrid(indxback, globdata.indxenermodi, indexing='ij')]]\n",
+    "            nextmodlflux[modiindx] = retr_rofi_flux(globdata, normback, nextpntsflux, modiindx)\n",
     "\n",
-    "        nextmodlcnts[modiindx] = nextmodlflux[modiindx] * globdata.expo[modiindx] * apix * globdata.diffener[globdata.indxenermodi, None, None] # [1]\n",
+    "        nextmodlcnts[modiindx] = nextmodlflux[modiindx] * globdata.expo[modiindx] * \\\n",
+    "            apix * globdata.diffener[globdata.indxenermodi, None, None] # [1]\n",
     "        nextllik[modiindx] = datacnts[modiindx] * log(nextmodlcnts[modiindx]) - nextmodlcnts[modiindx]\n",
     "            \n",
     "        if not isfinite(nextllik[modiindx]).any():\n",
@@ -547,7 +548,7 @@
     "        listspectemp.append(sampvarb[indxsampspec[l]])\n",
     "        \n",
     "\n",
-    "    pntsflux = retr_pntsflux(sampvarb[concatenate(indxsamplgal)], \\\n",
+    "    pntsflux = retr_pntsflux(globdata, sampvarb[concatenate(indxsamplgal)], \\\n",
     "                                           sampvarb[concatenate(indxsampbgal)], \\\n",
     "                                           concatenate(listspectemp, axis=1), sampvarb[indxsamppsfipara])\n",
     "    \n",
