--- a/main.ipynb
+++ b/main.ipynb
@@ -157,7 +157,7 @@
     "                else:\n",
     "                    for i in globdata.indxenerfdfn:\n",
     "                        fdfnsloptemp = icdf_atan(globdata.drmcsamp[globdata.indxsampfdfnslop[l, i], 0], globdata.minmfdfnslop, globdata.factfdfnslop)\n",
-    "                        globdata.drmcsamp[globdata.thisindxsampspec[l][i, :], 0] = copy(cdfn_spec(globdata.truespec[l][0, i, :], \\\n",
+    "                        globdata.drmcsamp[globdata.thisindxsampspec[l][i, :], 0] = copy(cdfn_spec(globdata, globdata.truespec[l][0, i, :], \\\n",
     "                                                                                fdfnsloptemp, globdata.minmspec[i], globdata.maxmspec[i]))\n",
     "\n",
     "\n",
@@ -920,27 +920,27 @@
     "                mocknormback[c, :] = icdf_logt(rand(globdata.numbener), \\\n",
     "                                                    globdata.minmnormback[c], globdata.factnormback[c])\n",
     "\n",
-    "        mockcnts = []\n",
-    "        mocklgal = []\n",
-    "        mockbgal = []\n",
-    "        mockspec = []\n",
+    "        mockcnts = [[] for l in globdata.indxpopl]\n",
+    "        mocklgal = [[] for l in globdata.indxpopl]\n",
+    "        mockbgal = [[] for l in globdata.indxpopl]\n",
+    "        mockspec = [[] for l in globdata.indxpopl]\n",
     "        if globdata.colrprio:\n",
-    "            mocksind = []\n",
+    "            mocksind = [[] for l in globdata.indxpopl]\n",
     "        for l in globdata.indxpopl:\n",
     "            mocklgal[l] = icdf_self(rand(mocknumbpnts[l]), -globdata.maxmgangmarg, 2. * globdata.maxmgangmarg)\n",
     "            mockbgal[l] = icdf_self(rand(mocknumbpnts[l]), -globdata.maxmgangmarg, 2. * globdata.maxmgangmarg) \n",
     "            mockspec[l] = empty((globdata.numbener, mocknumbpnts[l]))\n",
     "            for i in globdata.indxenerfdfn:\n",
-    "                mockspec[l][i, :] = icdf_spec(rand(mocknumbpnts[l]), \\\n",
+    "                mockspec[l][i, :] = icdf_spec(globdata, rand(mocknumbpnts[l]), \\\n",
     "                                              mockfdfnslop[l, i], globdata.minmspec[i], globdata.maxmspec[i])\n",
     "            if globdata.colrprio:\n",
     "                mocksind[l] = icdf_atan(rand(mocknumbpnts[l]), globdata.minmsind, globdata.factsind)\n",
     "                mockspec[l] = retr_spec(mockspec[l][globdata.indxenerfdfn, :], mocksind[l])\n",
     "            indxpixltemp = retr_indxpixl(globdata, mockbgal[l], mocklgal[l])\n",
     "            mockcnts[l] = mockspec[l][:, :, None] * globdata.expo[:, indxpixltemp, :] * globdata.diffener[:, None, None]\n",
-    "        mockpntsflux = retr_pntsflux(concatenate(mocklgal), concatenate(mockbgal), \\\n",
+    "        mockpntsflux = retr_pntsflux(globdata, concatenate(mocklgal), concatenate(mockbgal), \\\n",
     "                                               concatenate(mockspec, axis=1), mockpsfipara)\n",
-    "        mocktotlflux = retr_rofi_flux(mocknormback, mockpntsflux, fullindx)\n",
+    "        mocktotlflux = retr_rofi_flux(globdata, mocknormback, mockpntsflux, fullindx)\n",
     "        mocktotlcnts = mocktotlflux * globdata.expo * apix * globdata.diffener[:, None, None] # [1]\n",
     "\n",
     "        if globdata.verbtype > 1:\n",
