--- a/main.ipynb
+++ b/main.ipynb
@@ -723,7 +723,8 @@
     "        else:\n",
     "            globdata.pixlcnvt = zeros(globdata.numbpixlheal, dtype=int)\n",
     "            for k in range(globdata.indxpixlrofimarg.size):\n",
-    "                dist = retr_dist(lgalheal[globdata.indxpixlrofimarg[k]], bgalheal[globdata.indxpixlrofimarg[k]], globdata.lgalgrid, globdata.bgalgrid)\n",
+    "                dist = retr_dist(globdata, lgalheal[globdata.indxpixlrofimarg[k]], \\\n",
+    "                                 bgalheal[globdata.indxpixlrofimarg[k]], globdata.lgalgrid, globdata.bgalgrid)\n",
     "                globdata.pixlcnvt[globdata.indxpixlrofimarg[k]] = argmin(dist)\n",
     "\n",
     "            fobj = open(path, 'wb')\n",
@@ -1095,7 +1096,7 @@
     "    else:\n",
     "        globdata.indxpixlprox = [[] for h in range(globdata.numbspecprox)]\n",
     "        for j in globdata.indxpixl:\n",
-    "            dist = retr_dist(globdata.lgalgrid[j], globdata.bgalgrid[j], globdata.lgalgrid, globdata.bgalgrid)\n",
+    "            dist = retr_dist(globdata, globdata.lgalgrid[j], globdata.bgalgrid[j], globdata.lgalgrid, globdata.bgalgrid)\n",
     "            for h in range(globdata.numbspecprox):\n",
     "                # temp\n",
     "                globdata.indxpixlproxtemp = where(dist < deg2rad(globdata.maxmangleval))[0]\n",
