--- a/util.ipynb
+++ b/util.ipynb
@@ -126,12 +126,12 @@
     "    \n",
     "    numbpnts = lgal.size\n",
     "    \n",
-    "    dist = empty((numbpixl, numbpnts))\n",
+    "    dist = empty((globdata.numbpixl, numbpnts))\n",
     "    for k in range(numbpnts):\n",
-    "        dist[:, k] = retr_dist(lgal[k], bgal[k], globdata.lgalgrid, globdata.bgalgrid)\n",
+    "        dist[:, k] = retr_dist(globdata, lgal[k], bgal[k], globdata.lgalgrid, globdata.bgalgrid)\n",
     "\n",
     "    # convolve with the PSF\n",
-    "    pntsflux = empty((numbpnts, globdata.numbener, numbpixl, globdata.numbevtt))\n",
+    "    pntsflux = empty((numbpnts, globdata.numbener, globdata.numbpixl, globdata.numbevtt))\n",
     "    for k in range(numbpnts):\n",
     "        psfn = retr_psfn(globdata, psfipara, globdata.indxener, dist[:, k], globdata.psfntype, 'modl')\n",
     "        pntsflux[k, :, :, :] = spec[:, k, None, None] * psfn\n",
@@ -388,7 +388,8 @@
     "            for k in range(numbpnts):\n",
     "                \n",
     "                # calculate the distance to the pixels to be updated\n",
-    "                dist = retr_dist(lgal[k], bgal[k], globdata.lgalgrid[thisindxpixlprox[k]], globdata.bgalgrid[thisindxpixlprox[k]])\n",
+    "                dist = retr_dist(globdata, lgal[k], bgal[k], globdata.lgalgrid[thisindxpixlprox[k]], \\\n",
+    "                                     globdata.bgalgrid[thisindxpixlprox[k]])\n",
     "\n",
     "                # evaluate the PSF over the set of data cubes to be updated\n",
     "                if globdata.thisindxprop == indxproppsfipara:\n",
@@ -879,7 +880,7 @@
     "        drmcsamp[indxsamp, 1] = drmcsamp[indxsamp, 0] + normal(scale=stdv)\n",
     "\n",
     "        \n",
-    "def retr_dist(lgal0, bgal0, lgal1, bgal1):\n",
+    "def retr_dist(globdata, lgal0, bgal0, lgal1, bgal1):\n",
     "    \n",
     "    if globdata.pixltype == 'heal':\n",
     "        dir1 = array([lgal0, bgal0])\n",
