--- a/visu.ipynb
+++ b/visu.ipynb
@@ -716,7 +716,7 @@
     "            \n",
     "            if not globdata.colrprio or i == globdata.indxenerfdfn:\n",
     "                fdfnslop = thissampvarb[indxsampfdfnslop[l, i]]  \n",
-    "                fluxhistmodl = retr_fdfn(thissampvarb[indxsampfdfnnorm[l]], fdfnslop, i)\n",
+    "                fluxhistmodl = retr_fdfn(globdata, thissampvarb[indxsampfdfnnorm[l]], fdfnslop, i)\n",
     "                axis.plot(globdata.meanspec[i, :], fluxhistmodl, ls='--', alpha=0.5, color='b')\n",
     "            \n",
     "        if globdata.trueglobdata.info:\n",
